@@ -1,3 +1,7 @@
+2010-08-28  Robby Stephenson  <robby@periapsis.org>
+
+	* Fixed bug with adding new fields during CSV import.
+
 2010-08-25  Robby Stephenson  <robby@periapsis.org>
 
 	* Added GCstar export for wine collections.
